# calc

./: CMakeLists.txt  README.md  build.sh
db/: schema.sql
include/: auth.h  calculator.h  client.h  server.h
src/: CMakeLists.txt  main.cpp  server.cpp
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  auth.cpp  calculator.cpp  server.cpp
test/: CMakeLists.txt
